fix: margin before quotes in testimonials

--- a/layouts/partials/monnai-case-study.html
+++ b/layouts/partials/monnai-case-study.html
@@ -139,8 +139,7 @@
           Incubyte and would recommend them as engineering partners for any
           start-up launching new products.
         </p>
-        <img style="width: 62px; height: auto; align-self: end; margin-top: -20px"
-          src="{{ .Params.close_quote |relURL }}" />
+        <img style="width: 62px; height: auto; align-self: end;" src="{{ .Params.close_quote |relURL }}" />
       </div>
       <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
         src="{{ .Params.testimonial_person |relURL }}" />
