--- a/layouts/partials/finance-case-study.html
+++ b/layouts/partials/finance-case-study.html
@@ -147,8 +147,7 @@
           implementation expertise and best software development practices, and
           its been a pleasure working with them.
         </p>
-        <img style="width: 62px; height: auto; align-self: end; margin-top: -20px"
-          src="{{ .Params.close_quote |relURL }}" />
+        <img style="width: 62px; height: auto; align-self: end;" src="{{ .Params.close_quote |relURL }}" />
       </div>
       <img class="rounded-circle" style="width: 62px; height: 62px; background: #d9d9d9 !important"
         src="{{ .Params.testimonial_person |relURL }}" />
