--- a/layouts/partials/subscribe.html
+++ b/layouts/partials/subscribe.html
@@ -1,4 +1,4 @@
-<div class="mt-5 newsletter">
+<div class="mt-5 newsletter pixel-style-box">
   <iframe id="subscription-form-iframe" name="subscription-form-iframe" style="display:none;"></iframe>
 
   <form
@@ -6,24 +6,29 @@
     method="POST"
     target="subscription-form-iframe"
   >
-    <h2>Hey You!</h2>
     <p>
-      You were caught scrolling too fast!🚨
-      <br>
-      Tell me your email so that I can inform and monitor you next time we release a blog.
+      <i>
+        <strong>
+          👋 Hi, nice to meet you traveler!
+          You are reading the Incubyte blog, where we share our thoughts on software development and other topics.
+          If you want to stay up to date with our latest posts, subscribe to our newsletter below.
+        </strong>
+      </i>
     </p>
 
     <div id="subscription-form-input">
       <div class="row">
-        <div class="col-lg-10 col-md-10 d-flex align-items-center">
+        <div class="col-lg-9 col-md-9 d-flex align-items-center">
           <input aria-label="Input your email to subscribe to Incubyte"
                  class="form-control"
                  name="email"
                  placeholder="name@email.com"
                  type="text" />
         </div>
-        <div class="col-lg-2 col-md-2 mt-xl-0 mt-lg-0 mt-md-0 mt-2">
-          <input class="btn btn-primary" type="submit" value="Subscribe" />
+        <div class="col-lg-3 col-md-3 mt-md-0 mt-2 text-center">
+          <button class="btn btn-primary width-small-100" type="submit" >
+            Subscribe
+          </button>
         </div>
       </div>
     </div>
