--- a/layouts/partials/subscribe.html
+++ b/layouts/partials/subscribe.html
@@ -5,8 +5,10 @@
     action="https://hooks.airtable.com/workflows/v1/genericWebhook/appZga3G6CMmBbNQJ/wflzPU7JTdzStS9aT/wtrbcKCrRNfPAh0e8"
     method="POST"
     target="subscription-form-iframe"
+    class="h-100 d-flex flex-column justify-content-around"
   >
-    <p>
+    <div>
+      <p>
       <i>
         <strong>
           👋 Hi, nice to meet you traveler!
@@ -14,18 +16,19 @@
           If you want to stay up to date with our latest posts, subscribe to our newsletter below.
         </strong>
       </i>
-    </p>
+      </p>
+    </div>
 
     <div id="subscription-form-input">
       <div class="row">
-        <div class="col-lg-9 col-md-9 d-flex align-items-center">
+        <div class="col-max-small-container col-lg-9 col-md-9 d-flex align-items-center">
           <input aria-label="Input your email to subscribe to Incubyte"
                  class="form-control"
                  name="email"
                  placeholder="name@email.com"
                  type="text" />
         </div>
-        <div class="col-lg-3 col-md-3 mt-md-0 mt-2 text-center">
+        <div class="col-max-small-container col-lg-3 col-md-3 mt-md-0 mt-2 text-center">
           <button class="btn btn-primary width-small-100" type="submit" >
             Subscribe
           </button>
