Removed outcomes section

--- a/layouts/partials/build-deployment-case-study.html
+++ b/layouts/partials/build-deployment-case-study.html
@@ -4,29 +4,8 @@
         <h1 class="title text-center">{{ .Title }}</h1>
         <p class="summary text-center">{{ .Description }}</p>
         <p></p>
-  
-        <h2 class="section-heading text-center">OUTCOMES</h2>
-  
-        <div class="stats-container mt-5">
-          <div class="stats">
-            <p>~50%</p>
-            <p>decrease in turnaround time per contract(1 hour to 30 mins)</p>
-          </div>
-          <div class="stats">
-            <p>~4k</p>
-            <p>manual hours for 800 users saved every single day</p>
-          </div>
-          <div class="stats">
-            <p>~1.6X</p>
-            <p>daily active users across 5+ departments</p>
-          </div>
-          <div class="stats">
-            <p>~50</p>
-            <p>releases within two years</p>
-          </div>
-        </div>
       </div>
-      <div class="banner-container bg-catscolor">
+      <div class="banner-container bg-tbcolor">
         <img class="img_small" src="{{ .Params.banner_image |relURL }}" alt="{{ .Title }}" />
       </div>
       <div class="text-container">
@@ -509,8 +488,8 @@
       padding-bottom: 10px;
     }
   
-    .bg-catscolor {
-      background-color: #0c3e5a;
+    .bg-tbcolor {
+      background-color: #004A6C;
     }
   
     .bg-deep_blue {
