Updated what we did section

--- a/layouts/partials/build-deployment-case-study.html
+++ b/layouts/partials/build-deployment-case-study.html
@@ -14,45 +14,28 @@
         <div class="client-details-container mt-4">
           <div class="details-box">
             <p>Client</p>
-            <p>Leading Consumer Lending Bank</p>
+            <p>Centralized Expense Management Solution Provider</p>
           </div>
           <div class="details-box">
             <p>Industry</p>
-            <p>Finance</p>
+            <p>Telecom</p>
           </div>
         </div>
   
         <p class="paragraph-body">
-          Our client is a leading customer credit provider in the United States,
-          committed to assisting customers in achieving their objectives through
-          excellent customer service and flexible lending alternatives.
+          Our client is an industry leader providing centralized expense management solutions in the telecom and energy sector. 
+        They started their journey in the 1980s and have served several large customers with their platform.
         </p>
         <p class="paragraph-body">
-          For over 70 years, our client has been providing exceptional service to
-          its customers. As a high-performing company with a large credit
-          clientele, they want to optimize their processes further.
+          Their product is a centralized platform for customers to get informed on their telecom and energy expenses. It helps businesses and government organizations cut costs by running analytics on monthly vendor invoices. Our client also becomes the intermediary between the customer and their vendors to help suggest optimizations of services consumed that reduce billing amounts.
         </p>
   
         <h2 class="section-heading mt-5">WHAT WE DID</h2>
         <p class="paragraph-body">
-          When the client first approached us, the goal was to transition one of
-          the departments from a manual process to a digitized automated system.
+          Decades-old systems often stand the test of time, but evolve to accrue a lot of technical debt. Our client's system did so too. The SaaS product was built over 20 years and faced several unexpected issues that caused downtimes and customer frustration. This led to a decision to dedicate time and money to the critical modernization process!
         </p>
         <p class="paragraph-body">
-          After researching multiple department workflows, we realized the vast
-          potential involved in automation and cross-functional usability of the
-          product.
-        </p>
-        <p class="paragraph-body">
-          Through an in-depth discovery of the existing processes and problems,
-          prioritizing automation, and designing the best possible solution, we
-          were able to achieve the following for our client:
-        </p>
-        <p class="paragraph-body">
-          A keen study of the existing product and our client’s requirements, a
-          careful selection of suitable solutions, and close collaboration with
-          the client helped us achieve the goal of delivering a highly scalable
-          solution in a short time. Some of our key wins include:
+          Our approach included the following:
         </p>
         <div class="what-we-did-container">
           <div class="item">
@@ -61,8 +44,7 @@
                 src="{{ .Params.what_we_did_icon_1 |relURL }}" />
             </div>
             <p class="label">
-              Having a centralized system where agents can access all the loan
-              contracts.
+              Dot-voting exercise with stakeholders
             </p>
           </div>
   
@@ -72,8 +54,7 @@
                 src="{{ .Params.what_we_did_icon_2 |relURL }}" />
             </div>
             <p class="label">
-              Frequently deploying new updates and maintaining an average release
-              of two weeks for the last two years.
+              Identifying their biggest pain points (frequent hotfixes and deployment issues)
             </p>
           </div>
   
@@ -83,8 +64,7 @@
                 src="{{ .Params.what_we_did_icon_3 |relURL }}" />
             </div>
             <p class="label">
-              Automating all manual checks, saving up to 4000 manual hours for 800
-              users.
+              Focus on modernizing their build and deployment pipelines
             </p>
           </div>
   
@@ -94,8 +74,7 @@
                 src="{{ .Params.what_we_did_icon_4 |relURL }}" />
             </div>
             <p class="label">
-              Transforming more than five departments, thanks to the success of
-              transforming one department.
+             Control new technical debt from flowing in
             </p>
           </div>
   
@@ -105,8 +84,7 @@
                 src="{{ .Params.what_we_did_icon_5 |relURL }}" />
             </div>
             <p class="label">
-              Improving the entire banking process, leading to immense client
-              satisfaction.
+              Get them started with automated testing
             </p>
           </div>
         </div>
