--- a/layouts/partials/build-deployment-case-study.html
+++ b/layouts/partials/build-deployment-case-study.html
@@ -96,7 +96,7 @@
           <a href="{{.Page.Permalink}}#highlight_1">
             <div class="item">
               <p class="index">1.</p>
-              <p class="label">Problem discovery</p>
+              <p class="label">Creating a strategy for transformation</p>
               <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
             </div>
           </a>
@@ -104,7 +104,7 @@
           <a href="{{.Page.Permalink}}#highlight_2">
             <div class="item">
               <p class="index">2.</p>
-              <p class="label">Centralized system to access loan contracts</p>
+              <p class="label">Setting up a build management system</p>
               <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
             </div>
           </a>
@@ -112,7 +112,7 @@
           <a href="{{.Page.Permalink}}#highlight_3">
             <div class="item">
               <p class="index">3.</p>
-              <p class="label">Addressing privacy concerns</p>
+              <p class="label">Introducing quality gates via CI/CD and Sonar</p>
               <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
             </div>
           </a>
@@ -120,7 +120,7 @@
           <a href="{{.Page.Permalink}}#highlight_4">
             <div class="item">
               <p class="index">4.</p>
-              <p class="label">Automating static, repeated checks</p>
+              <p class="label">Bringing in testing frameworks and tools</p>
               <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
             </div>
           </a>
@@ -128,42 +128,22 @@
           <a href="{{.Page.Permalink}}#highlight_5">
             <div class="item">
               <p class="index">5.</p>
-              <p class="label">Intuitive UI</p>
-              <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
-            </div>
-          </a>
-  
-          <a href="{{.Page.Permalink}}#highlight_6">
-            <div class="item">
-              <p class="index">6.</p>
-              <p class="label">Lightweight system</p>
-              <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
-            </div>
-          </a>
-  
-          <a href="{{.Page.Permalink}}#highlight_7">
-            <div class="item">
-              <p class="index">7.</p>
-              <p class="label">The road ahead</p>
+              <p class="label">Automating database upgrades</p>
               <img style="width: 28px; height: auto; align-self: start" src="{{ .Params.right_arrow |relURL }}" />
             </div>
           </a>
         </div>
   
         <h3 class="project-highlights-subheading mt-5" id="highlight_1">
-          1. PROBLEM DISCOVERY
+          1. CREATING A STRATEGY FOR TRANSFORMATION
         </h3>
   
         <p class="paragraph-body mt-3">
-          Our client has over 3.6 million unique loan contracts across various
-          departments. Manually handling these contracts led to significant
-          bottlenecks as the number of contracts escalated.
+          Our client’s significant issue was the lack of proper structure, whether in the codebase or processes they followed
         </p>
   
         <p class="paragraph-body">
-          The client also used a legacy CRM hosted on on-prem servers. This
-          involved substantial maintenance costs for servers and a separate IT
-          department.
+          In our case, the way the source code was stored in the version control system and how a development environment understood it were at odds with each other.
         </p>
   
         <p class="paragraph-body">
